[FIX] helpdesk: on mobile view the second half of the dashboard is not displayed
Currently, when open helpdesk module mobile 'my performance' portion of
dashboard is not displayed.

So, in this commit, 'my performance' portion of dashboard is displayed.

closes odoo/enterprise#12594

Taskid: 2314928

--- a/helpdesk/static/src/scss/helpdesk.scss
+++ b/helpdesk/static/src/scss/helpdesk.scss
@@ -15,6 +15,9 @@
         border-bottom: 1px solid #CED4DA;
         background-color: $o-view-background-color;
         z-index: 10;
+        width: 100%;
+        overflow-x: auto;
+        white-space: nowrap;
 
         .o_welcome_message {
             width: 100%;
@@ -68,12 +71,16 @@
             @include media-breakpoint-up(md) {
                 width: 50%;
             }
+            @include media-breakpoint-up(lg) {
+                display: inline-block;
+                float: none;
+            }
 
             > table {
                 margin-bottom: 0;
-                table-layout: fixed;
                 border-spacing: $sale-table-spacing 0px;
                 border-collapse: separate;
+                white-space: initial;
                 > tbody > tr > td {
                     vertical-align: middle;
                     text-align: center;
